--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: ADRVMICR2/ADRVMIC SupportSite
+logo: https://bit-trade-one.co.jp/wp/wp-content/uploads/2022/06/f4d94dffc9d1d40169a9710aa342769b-1.jpg
+description: REVIVE-USB-Micro-Rev.1のサポートサイトです。
+show_downloads: false
